# billiards

./: .gitignore  README.md  billiards.pyx  cython_header.pxd  pyproject.toml  setup.py
billiards/: billiards.pyx  cython_header.pxd
billiards/cpp/: billiards-cpp.cpp  billiards-cpp.sln  billiards-cpp.vcxproj  billiards-cpp.vcxproj.filters
billiards/cpp/billiards/: Disc.cpp  Disc.h  Event.cpp  Event.h  Vec2D.cpp  Wall.h
cpp/: billiards-cpp.cpp  billiards-cpp.vcxproj  billiards-cpp.vcxproj.filters
cpp/billiards/: Disc.cpp  Disc.h  Event.cpp  Event.h  Sim.cpp  Sim.h  Vec2D.cpp  Vec2D.h  Wall.cpp  Wall.h
docs/Modelling an Ideal Gas/: bibo.bib  main.tex
docs/billiards/: bibo.bib  main.tex
examples/: __init__.py  animation.py  basic_simulation.py  buoyancy.ipynb  buoyancy_worker.py  equation-of-state.ipynb  equation_of_state_worker.py  equipartition.ipynb  gravity.ipynb  maxwell-boltzmann.ipynb  separation.ipynb
testing/: test_billiards.py
